--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,10 @@ body {
     
     border-radius: 4px;
     margin: 4px;
+
+    border: rgba(8, 90, 138, 0.644) solid 1px;
+    box-shadow: 4px 4px 8px;
+    cursor: pointer;
 }
 .deck {
     background-image: url(image041.jpg);
@@ -184,4 +188,35 @@ body {
 .ready:hover {
     background-color: rgba(35, 35, 92, 0.418);
     color: #eee;
+}
+
+
+.EnemyName {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    border: teal solid 1px;
+    font-size: 2.5rem;
+    padding: 20px;
+    width: 120px;
+    text-align: center;
+    text-shadow: rgba(11, 51, 88, 0.274) 2px 8px 3px;
+    font-family: FreeMono, monospace;
+    border-radius: 30px;
+
+}
+
+.PlayerName {
+    position: absolute;
+    bottom: 10%;
+    left: 10%;
+    border: teal solid 1px;
+    font-size: 2.5rem;
+    padding: 20px;
+    width: 120px;
+    text-align: center;
+    text-shadow: rgba(11, 51, 88, 0.274) 2px 8px 3px;
+    font-family: FreeMono, monospace;
+    border-radius: 30px;
+    text-transform: capitalize;
 }
