--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,8 @@ cursor: pointer;
 }
 .hover:hover {
     position: relative;
-    bottom: 30px; 
+    transform: translateY(-30px); 
+    transition: transform 0.5s ease-in-out;
     cursor: pointer;
     
 }
@@ -123,19 +124,14 @@ cursor: pointer;
     cursor: pointer;
     position: relative;
     bottom: 30px;
+    
 
 }
  
-/* .moveCard {
+.moveCard {
+   cursor: pointer; 
     
-    display: inline-flex;
-    position: absolute;
-    bottom: 90px;
-    right: 280px;
-
-   
-      
-} */
+}
 
 
 .playerRevealedCards {
@@ -166,7 +162,9 @@ cursor: pointer;
     
 }
 
-.start {
+.replayBtn {
+    position: absolute;
+    left: 12%;
     background: none;
     border: rgb(22, 66, 35) solid 1px;
     font-size: 2rem;
@@ -191,7 +189,7 @@ cursor: pointer;
     bottom: 30%;
 }
 
-.start:hover {
+.replayBtn:hover {
     background-color: rgba(10, 85, 20, 0.418);
     color: #eee;
 }
@@ -243,6 +241,43 @@ cursor: pointer;
 
 .Pile {
     position: absolute;
+    right: -4px;
     
 
+}
+
+.manyCards {
+    margin: -35px;
+}
+
+.enterName {
+    display: flex;
+    z-index: 1;
+    position: absolute;
+    height: 180px;
+    width: 400px;
+    border: rgb(32, 104, 14) solid 0.5px;
+    border-radius: 10px;
+    background-color: #eee;
+    align-items: center;
+    text-align: center;
+    outline: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+
+.nameInput {
+    
+    height: 30px;
+    width: 200px;
+    font-size: 20px;
+    
+
+}
+
+.nameButton {
+    margin: 20px;
+    height: 30px;
+    width: 100px;
+    font-size: 20px;
 }
